--- a/FINALPROJECT320.html
+++ b/FINALPROJECT320.html
@@ -200,22 +200,9 @@ $(document).ready(function () {
 <div id="getting-started" class="section level2">
 <h2>1) Getting Started</h2>
 <p>The first step is to acquire our data. This requires downloading every season’s data from <a href="https://datahub.io/sports-data/english-premier-league" class="uri">https://datahub.io/sports-data/english-premier-league</a>. We will be dealing with the csv versions so opt to download that version instead of the json. Once the data is downloaded we can import them into data frames using the read.csv() command. After creating data frames for all 10 seasons we can use the rbind() command to append each season’s data frame to one another creating a “total” data frame that houses all 10 season’s worth of information.</p>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## -- Attaching packages --------------- tidyverse 1.2.1 --</code></pre>
-<pre><code>## v ggplot2 3.1.0     v purrr   0.3.0
-## v tibble  2.0.1     v dplyr   0.7.8
-## v tidyr   0.8.2     v stringr 1.3.1
-## v readr   1.3.1     v forcats 0.3.0</code></pre>
-<pre><code>## -- Conflicts ------------------ tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>library(reshape2)</code></pre>
-<pre><code>## 
-## Attaching package: 'reshape2'</code></pre>
-<pre><code>## The following object is masked from 'package:tidyr':
-## 
-##     smiths</code></pre>
-<pre class="r"><code>`1819` &lt;- read.csv(file=&quot;C:/Users/socce/Downloads/english-premier-league_zip/data/season-1819_csv.csv&quot;, header=TRUE, sep=&quot;,&quot;)
+<pre class="r"><code>library(tidyverse)
+library(reshape2)
+`1819` &lt;- read.csv(file=&quot;C:/Users/socce/Downloads/english-premier-league_zip/data/season-1819_csv.csv&quot;, header=TRUE, sep=&quot;,&quot;)
 `1718` &lt;- read.csv(file=&quot;C:/Users/socce/Downloads/english-premier-league_zip/data/season-1718_csv.csv&quot;, header=TRUE, sep=&quot;,&quot;)
 `1617` &lt;- read.csv(file=&quot;C:/Users/socce/Downloads/english-premier-league_zip/data/season-1617_csv.csv&quot;, header=TRUE, sep=&quot;,&quot;)
 `1516` &lt;- read.csv(file=&quot;C:/Users/socce/Downloads/english-premier-league_zip/data/season-1516_csv.csv&quot;, header=TRUE, sep=&quot;,&quot;)
